require-resource-limits/no-limits-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unbounded-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.21.6
