require-resource-limits/with-limits-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bounded-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.21.6
      resources:
        limits:
          memory: "256Mi"
          cpu: "500m"
